{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 60,
  "lineage": "f6a67c92-50cc-5ab6-1f5d-87b115ab4773",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0796a15f38ce09e61",
            "arn": "arn:aws:ec2:ap-south-1:692414550794:elastic-ip/eipalloc-0796a15f38ce09e61",
            "association_id": "eipassoc-0c4184d4dfa46f348",
            "domain": "vpc",
            "id": "eipalloc-0796a15f38ce09e61",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-051cd7773b75b0a69",
            "private_dns": "ip-10-0-1-76.ap-south-1.compute.internal",
            "private_ip": "10.0.1.76",
            "public_dns": "ec2-13-200-192-116.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.200.192.116",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "terraform-project-nat-eip-1"
            },
            "tags_all": {
              "Name": "terraform-project-nat-eip-1"
            }
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051ff5d3bc36c7ace",
            "arn": "arn:aws:ec2:ap-south-1:692414550794:elastic-ip/eipalloc-051ff5d3bc36c7ace",
            "association_id": "eipassoc-0e772e2b27e92a2dd",
            "domain": "vpc",
            "id": "eipalloc-051ff5d3bc36c7ace",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0505ff5c32ff31693",
            "private_dns": "ip-10-0-2-125.ap-south-1.compute.internal",
            "private_ip": "10.0.2.125",
            "public_dns": "ec2-3-111-78-60.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.78.60",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "terraform-project-nat-eip-2"
            },
            "tags_all": {
              "Name": "terraform-project-nat-eip-2"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:692414550794:internet-gateway/igw-0dc24a255d28bcf59",
            "id": "igw-0dc24a255d28bcf59",
            "owner_id": "692414550794",
            "region": "ap-south-1",
            "tags": {
              "Name": "terraform-project-igw"
            },
            "tags_all": {
              "Name": "terraform-project-igw"
            },
            "vpc_id": "vpc-0808368b7ef59128e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:692414550794:loadbalancer/app/terraform-project-alb/ac191b4b86040a67",
            "arn_suffix": "app/terraform-project-alb/ac191b4b86040a67",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-project-alb-1546660286.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:692414550794:loadbalancer/app/terraform-project-alb/ac191b4b86040a67",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-project-alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-0bf207c15b54c8b08"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-005cbae0ef6bf1621"
              },
              {
                "subnet_id": "subnet-09d57a2c3c343ea38"
              }
            ],
            "subnets": [
              "subnet-005cbae0ef6bf1621",
              "subnet-09d57a2c3c343ea38"
            ],
            "tags": {
              "Name": "terraform-project-alb"
            },
            "tags_all": {
              "Name": "terraform-project-alb"
            },
            "vpc_id": "vpc-0808368b7ef59128e",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:692414550794:loadbalancer/app/terraform-project-alb/ac191b4b86040a67"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:692414550794:listener/app/terraform-project-alb/ac191b4b86040a67/05f4cfe9a169bda4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:692414550794:targetgroup/terraform-project-tg-web/b8afedd43de3fba2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:692414550794:listener/app/terraform-project-alb/ac191b4b86040a67/05f4cfe9a169bda4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:692414550794:loadbalancer/app/terraform-project-alb/ac191b4b86040a67",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:692414550794:listener/app/terraform-project-alb/ac191b4b86040a67/05f4cfe9a169bda4"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.web",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:692414550794:targetgroup/terraform-project-tg-web/b8afedd43de3fba2",
            "arn_suffix": "targetgroup/terraform-project-tg-web/b8afedd43de3fba2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:692414550794:targetgroup/terraform-project-tg-web/b8afedd43de3fba2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:692414550794:loadbalancer/app/terraform-project-alb/ac191b4b86040a67"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraform-project-tg-web",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "terraform-project-tg-web"
            },
            "tags_all": {
              "Name": "terraform-project-tg-web"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0808368b7ef59128e"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:692414550794:targetgroup/terraform-project-tg-web/b8afedd43de3fba2"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0796a15f38ce09e61",
            "association_id": "eipassoc-0c4184d4dfa46f348",
            "connectivity_type": "public",
            "id": "nat-0822b3113bf214e5d",
            "network_interface_id": "eni-051cd7773b75b0a69",
            "private_ip": "10.0.1.76",
            "public_ip": "13.200.192.116",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09d57a2c3c343ea38",
            "tags": {
              "Name": "terraform-project-nat-gw-1"
            },
            "tags_all": {
              "Name": "terraform-project-nat-gw-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051ff5d3bc36c7ace",
            "association_id": "eipassoc-0e772e2b27e92a2dd",
            "connectivity_type": "public",
            "id": "nat-0030103833f4598b2",
            "network_interface_id": "eni-0505ff5c32ff31693",
            "private_ip": "10.0.2.125",
            "public_ip": "3.111.78.60",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-005cbae0ef6bf1621",
            "tags": {
              "Name": "terraform-project-nat-gw-2"
            },
            "tags_all": {
              "Name": "terraform-project-nat-gw-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:692414550794:route-table/rtb-001750d701138002a",
            "id": "rtb-001750d701138002a",
            "owner_id": "692414550794",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0822b3113bf214e5d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-project-private-rtb-1"
            },
            "tags_all": {
              "Name": "terraform-project-private-rtb-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0808368b7ef59128e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "692414550794",
            "id": "rtb-001750d701138002a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main_nat",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:692414550794:route-table/rtb-0cc9b11910f993980",
            "id": "rtb-0cc9b11910f993980",
            "owner_id": "692414550794",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0030103833f4598b2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-project-private-rtb-2"
            },
            "tags_all": {
              "Name": "terraform-project-private-rtb-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0808368b7ef59128e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "692414550794",
            "id": "rtb-0cc9b11910f993980",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main_nat",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:692414550794:route-table/rtb-059c8e83a8c548e49",
            "id": "rtb-059c8e83a8c548e49",
            "owner_id": "692414550794",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dc24a255d28bcf59",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-project-public-rtb"
            },
            "tags_all": {
              "Name": "terraform-project-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0808368b7ef59128e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "692414550794",
            "id": "rtb-059c8e83a8c548e49",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rtb_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe1fccb22bb9a231",
            "region": "ap-south-1",
            "route_table_id": "rtb-001750d701138002a",
            "subnet_id": "subnet-075c071245f1c422a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main_nat",
            "aws_route_table.private_rtb",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbd1b603d404df68",
            "region": "ap-south-1",
            "route_table_id": "rtb-0cc9b11910f993980",
            "subnet_id": "subnet-0ff3daf38bf694519"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main_nat",
            "aws_route_table.private_rtb",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rtb_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06441ea712a834bd4",
            "region": "ap-south-1",
            "route_table_id": "rtb-059c8e83a8c548e49",
            "subnet_id": "subnet-09d57a2c3c343ea38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_rtb",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bebe8aef052ff68",
            "region": "ap-south-1",
            "route_table_id": "rtb-059c8e83a8c548e49",
            "subnet_id": "subnet-005cbae0ef6bf1621"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_rtb",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:692414550794:security-group/sg-0bf207c15b54c8b08",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf207c15b54c8b08",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-project-alb-sg",
            "name_prefix": "",
            "owner_id": "692414550794",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-project-alb-sg"
            },
            "tags_all": {
              "Name": "terraform-project-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0808368b7ef59128e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "692414550794",
            "id": "sg-0bf207c15b54c8b08",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:692414550794:security-group/sg-05c308968f76dd51c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05c308968f76dd51c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c900c2d95c62dd34"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-project-rds-sg",
            "name_prefix": "",
            "owner_id": "692414550794",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-project-rds-sg"
            },
            "tags_all": {
              "Name": "terraform-project-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0808368b7ef59128e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "692414550794",
            "id": "sg-05c308968f76dd51c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.web",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:692414550794:security-group/sg-0c900c2d95c62dd34",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c900c2d95c62dd34",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bf207c15b54c8b08"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-project-web-sg",
            "name_prefix": "",
            "owner_id": "692414550794",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-project-web-sg"
            },
            "tags_all": {
              "Name": "terraform-project-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0808368b7ef59128e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "692414550794",
            "id": "sg-0c900c2d95c62dd34",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:692414550794:subnet/subnet-075c071245f1c422a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075c071245f1c422a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "692414550794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "terraform-project-private-subnet-1",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "terraform-project-private-subnet-1",
              "Type": "Private"
            },
            "vpc_id": "vpc-0808368b7ef59128e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "692414550794",
            "id": "subnet-075c071245f1c422a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:692414550794:subnet/subnet-0ff3daf38bf694519",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff3daf38bf694519",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "692414550794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "terraform-project-private-subnet-2",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "terraform-project-private-subnet-2",
              "Type": "Private"
            },
            "vpc_id": "vpc-0808368b7ef59128e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "692414550794",
            "id": "subnet-0ff3daf38bf694519",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:692414550794:subnet/subnet-09d57a2c3c343ea38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d57a2c3c343ea38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "692414550794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "terraform-project-public-subnet-1",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "terraform-project-public-subnet-1",
              "Type": "Public"
            },
            "vpc_id": "vpc-0808368b7ef59128e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "692414550794",
            "id": "subnet-09d57a2c3c343ea38",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:692414550794:subnet/subnet-005cbae0ef6bf1621",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005cbae0ef6bf1621",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "692414550794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "terraform-project-public-subnet-2",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "terraform-project-public-subnet-2",
              "Type": "Public"
            },
            "vpc_id": "vpc-0808368b7ef59128e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "692414550794",
            "id": "subnet-005cbae0ef6bf1621",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:692414550794:vpc/vpc-0808368b7ef59128e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0792b5884b765cf9b",
            "default_route_table_id": "rtb-02b1f032ad48522af",
            "default_security_group_id": "sg-0499eb1d33326111d",
            "dhcp_options_id": "dopt-05ac4d0aac039b4aa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0808368b7ef59128e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02b1f032ad48522af",
            "owner_id": "692414550794",
            "region": "ap-south-1",
            "tags": {
              "Name": "terraform-project-vpc"
            },
            "tags_all": {
              "Name": "terraform-project-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "692414550794",
            "id": "vpc-0808368b7ef59128e",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}